--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     
 
 }
+
 .btn {
     padding: 0.5rem 2rem;
     border: 1px #ccc solid;
@@ -13,4 +14,12 @@ body {
     color: #333;
     transition: background 500ms ease;
 }
+h1 {
+    font-weight: 400;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+
 
