--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    
+    font-family: 'Roboto Condensed', sans-serif;
     
 
 }
@@ -17,8 +18,12 @@ body {
 h1 {
     font-weight: 400;
     font-size: 2.5rem;
-    text-transform: uppercase;
+
     margin: 0;
+}
+.footer{
+    
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 
